assets/css/base/base.css
:root {
  /* credit: https://modernfontstacks.com/ */
  --font-family:
    Avenir, Montserrat, Corbel, "URW Gothic", source-sans-pro, sans-serif;
  --font-family-monospace:
    ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
    "DejaVu Sans Mono", monospace;

  --color-white: #fff;
  --color-off-white: #f8f6f4;
  --color-off-white-2: #f5f2ef;
  --color-off-white-3: #f6e5dd;

  --color-gray-10: #f2f2f2;
  --color-gray-20: #e0e0e0;
  --color-gray-50: #c0c0c0;
  --color-gray-90: #141414;

  /* NOTE: hue colors are altered below if support is available for oklch and hd colors */
  --color-blue: #0052a6;
  --color-blue-2: #003c7e;
  --color-blue-3: #00204d;

  --color-orange: #ff931f;
  --color-orange-2: #ff9f40;
  --color-orange-3: #f8c800;

  --color-red: #900;
  --color-red-2: #ff5843;

  --color-turquoise: #00959c;
  --color-turquoise-dark: #00606f;
  --color-turquoise-light: #00cbc3;

  --text-color-link: var(--color-accent);
  --text-color-link-active: var(--color-accent-secondary);
  --text-color-link-visited: var(--color-accent-secondary);

  /* type scale ratio: 1.25 */
  --text-size-md: 1.25rem; /* 20px */
  --text-size-sm: 1rem; /* 16px */
  --text-size-xsm: 0.8125rem; /* 13px */
  --text-size-h1: 3.8125rem; /* 61px */
  --text-size-h2: 3rem; /* 48px */
  --text-size-h3: 2.4375rem; /* 39px */
  --text-size-h4: 1.953125rem; /* 31.25px */
  --text-size-h5: 1.5625rem; /* 25px */

  --line-height-body: 1.65;
  --line-height-heading: 1.15;

  --letter-spacing: 0.0625em;

  /* spacing variables */
  --spacing-xxs: 4px;
  --spacing-xs: 8px;
  --spacing-sm: 12px;
  --spacing-md: 16px;
  --spacing-mmd: 24px;
  --spacing-lg: 32px;
  --spacing-xl: 48px;
  --spacing-xxl: 64px;
  --spacing-xxxl: 96px;

  --border-radius: 4px;

  --page-width-normal: 900px;
  --page-width-wide: 1280px;

  --desktop-max-width: var(--page-size-normal);
  --main-nav-height: 3.375rem;

  /* focus indicator style variables */
  --focus-color: var(--color-accent-focus);
  --focus-style-width: 0.15em;
  --focus-style-outline: var(--focus-style-width) solid var(--focus-color);
  --focus-style-outline-offset: var(--spacing-xxs);
  --focus-style-box-shadow: 0 0 0 4px var(--focus-color);
  --focus-style-button-box-shadow: 0 0 0 6px var(--focus-color);
}

/* modify color palette for richer colors when p3 is available */
@media (dynamic-range: high) {
  @supports (background: oklch(72% 0.19 58)) {
    :root {
      --color-orange: oklch(77% 0.19 58deg);
      --color-orange-2: oklch(80% 0.17 58deg);
      --color-orange-3: oklch(85% 0.18 92deg);
      --color-red: oklch(42.5% 0.18 30deg);
      --color-red-2: oklch(70% 0.24 30deg);
      --color-blue: oklch(44% 0.16 250deg);
      --color-blue-2: oklch(36% 0.13 252deg);
      --color-blue-3: oklch(25% 0.1 254deg);
      --color-turquoise: oklch(60% 0.12 200deg);
      --color-turquoise-dark: oklch(44% 0.1 210deg);
      --color-turquoise-light: oklch(75% 0.16 190deg);
    }
  }
}

@media screen and (width >= 46.75rem) {
  :root {
    --main-nav-height: 4.375rem;
  }
}

:root,
:root[data-theme="light"] {
  color-scheme: light;
  --color-accent: var(--color-blue);
  --color-accent-focus: var(--color-blue-2);
  --color-accent-secondary: var(--color-blue-3);
  --color-accent-invert: var(--color-white);
  --color-accent-bg: transparent;
  --color-accent-bg-hover: #add5fa;
  --background-color: var(--color-off-white);
  --background-color-secondary: var(--color-off-white-3);
  --text-color: var(--color-gray-90);
  --color-error: var(--color-red);
}

:root[data-theme="dark"] {
  color-scheme: dark;
  --color-accent: var(--color-orange);
  --color-accent-focus: var(--color-orange-2);
  --color-accent-secondary: var(--color-orange-3);
  --color-accent-invert: var(--color-blue-3);
  --color-accent-bg: #3c2a1f;
  --color-accent-bg-hover: rgb(230 137 51 / 12%);
  --background-color: #222;
  --background-color-secondary: #1e1810;
  --text-color: var(--color-gray-10);
  --text-color-link: var(--color-accent-secondary);
  --text-color-link-active: var(--color-accent);
  --text-color-link-visited: var(--color-accent);
  --color-error: var(--color-red-2);
}

@media (prefers-color-scheme: dark) {
  :root:not([data-theme]) {
    /* NOTE: duplicate of code block directly above */
    color-scheme: dark;
    --color-accent: var(--color-orange);
    --color-accent-focus: var(--color-orange-2);
    --color-accent-secondary: var(--color-orange-3);
    --color-accent-invert: var(--color-blue-3);
    --color-accent-bg: #3c2a1f;
    --color-accent-bg-hover: rgb(230 137 51 / 12%);
    --background-color: #222;
    --background-color-secondary: #1e1810;
    --text-color: var(--color-gray-10);
    --text-color-link: var(--color-accent-secondary);
    --text-color-link-active: var(--color-accent);
    --text-color-link-visited: var(--color-accent);
    --color-error: var(--color-red-2);
  }
}

@layer base {
  html,
  body {
    background-color: var(--background-color);
  }

  html {
    overflow-y: scroll;
    scrollbar-gutter: stable;
  }

  @media (prefers-reduced-motion: no-preference) {
    html {
      scroll-behavior: smooth;
    }
  }

  body {
    font-family: var(--font-family);
    font-size: var(--text-size-md);
    font-weight: normal;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    color: var(--text-color);
    line-height: var(--line-height-body);
    overflow-x: hidden;
    accent-color: var(--color-accent);
  }

  body[data-page-size="fullwidth"] {
    --desktop-max-width: var(--page-width-wide);
  }

  body[data-page-size="normal"] {
    --desktop-max-width: var(--page-width-normal);
  }

  header,
  main,
  footer {
    margin: 0 auto;
  }

  main {
    max-width: var(--desktop-max-width);
    padding: var(--spacing-lg) var(--spacing-mmd) var(--spacing-xxxl);
  }

  main:first-child {
    margin-top: 0;
  }

  /* handles focus style for header .skip-link */
  main:focus-visible {
    outline: var(--focus-style-outline);
    outline-offset: calc(-1 * var(--focus-style-width));
  }

  @supports not selector(:focus-visible) {
    main:focus {
      outline: var(--focus-style-outline);
      outline-offset: calc(-1 * var(--focus-style-width));
    }
  }

  *::selection {
    color: var(--color-accent-invert);
    background-color: var(--color-accent);
  }

  h1,
  h2,
  h3,
  h4,
  h5 {
    margin-top: var(--spacing-lg);
    margin-bottom: var(--spacing-md);
    line-height: var(--line-height-heading);
    text-wrap: balance;
  }

  /* sets focus style on jump link fragments */
  h2[id]:target,
  h3[id]:target,
  h4[id]:target,
  h5[id]:target {
    margin-left: calc(-1 * var(--spacing-md));
    margin-right: calc(-1 * var(--spacing-md));
    padding-left: var(--spacing-md);
    padding-right: var(--spacing-md);
    color: var(--color-accent-invert);
    background-color: var(--color-accent);
  }

  @media (prefers-reduced-motion: no-preference) {
    h2[id]:target,
    h3[id]:target,
    h4[id]:target,
    h5[id]:target {
      transition: background-color 1s ease-in-out;

      @starting-style {
        background-color: transparent;
      }
    }
  }

  h1 {
    font-size: var(--text-size-h1);
    margin-top: 0;
    margin-bottom: var(--spacing-xl);
  }

  h2 {
    margin-top: var(--spacing-xl);
    font-size: var(--text-size-h2);
  }

  h3 {
    font-size: var(--text-size-h3);
  }

  h4 {
    font-size: var(--text-size-h4);
  }

  h5 {
    font-size: var(--text-size-h5);
  }

  p,
  :is(ul, ol):not([role="list"]) li {
    max-width: 77ch;
    margin-bottom: 1lh;
    text-wrap: pretty;
  }

  p {
    margin-bottom: var(--spacing-mmd);
  }

  p:last-child {
    margin-bottom: 0;
  }

  caption,
  figcaption {
    font-size: var(--text-size-sm);
  }

  small {
    font-size: var(--text-size-xsm);
  }

  [href] {
    color: var(--text-color-link);
    text-decoration-skip-ink: auto;
    text-decoration-thickness: 0.125rem;
    text-underline-offset: 0.2em;
    transition: text-decoration-thickness 0.25s ease-in;
  }

  @media (prefers-reduced-motion: reduce) {
    [href] {
      transition: none;
    }
  }

  a[href]:visited {
    color: var(--text-color-link-visited);
  }

  a[href]:active {
    color: var(--text-color-link-active);
  }

  a[href]:hover,
  a[href]:focus {
    color: var(--color-accent-focus);
    outline: transparent;
    text-decoration-thickness: 0.5rem;
    text-decoration-skip-ink: none;
  }

  dl > div {
    display: flex;
    align-items: baseline;
    flex-wrap: wrap;
    gap: 0 var(--spacing-md);
    line-height: 1.75;
  }

  dl,
  ul,
  ol {
    margin-bottom: var(--spacing-mmd);
  }

  li > ul,
  [role="list"] {
    margin-bottom: 0;
  }

  [role="list"] {
    padding: 0;
  }

  [role="list"] li {
    list-style: none;
  }

  ul:not([role="list"]) li,
  ol:not([role="list"]) li {
    margin-bottom: var(--spacing-md);
  }

  ul.inline,
  ol.inline {
    display: flex;
    align-items: baseline;
    gap: var(--gap, var(--spacing-sm));
  }
}

